feat(example): list files
